<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_img_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:id="@+id/llPurchaseItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/md_keylines"
            android:orientation="vertical">

            <TextView
                style="@style/TextStylePurchaseActivity"
                android:text="@string/full_app"
                android:textSize="40sp" />

            <TextView
                style="@style/TextStylePurchaseActivity"
                android:text="@string/unlock_all_questions"
                android:textSize="20sp" />

            <TextView
                style="@style/TextStylePurchaseActivity"
                android:text="@string/unlock_all_new_questions"
                android:textSize="20sp" />

            <TextView
                style="@style/TextStylePurchaseActivity"
                android:text="@string/app_price"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/md_keylines"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAllTests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:src="@drawable/btn_upgrade_big_design"
                android:contentDescription="@string/image_description_buy_full_app" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>