<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/card_score_group_bg"
    android:elevation="5dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:text="@string/dialog_are_you_sure"
        android:textSize="30sp"
        style="@style/ResultTestTExtStyle" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/md_keylines"
        android:src="@drawable/exit" />

    <LinearLayout
        android:gravity="end"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnExitFromTestCancel"
            android:text="@string/dialog_no"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/bank_gothic_light_bt"
            android:textSize="14sp"
            android:textColor="@color/color_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_for_alert_dialog"
            />

        <View
            android:layout_width="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="match_parent"
            android:background="@color/color_1_1"/>
        <Button
            android:id="@+id/btnExitFromTestConfirm"
            android:text="@string/dialog_yes"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/bank_gothic_light_bt"
            android:textSize="14sp"
            android:textColor="@color/color_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_for_alert_dialog"
            />

    </LinearLayout>

</LinearLayout>